--- a/config.toml
+++ b/config.toml
@@ -63,7 +63,7 @@ paginate = 4
   weight = 4
 
   [[menu.main]]
-  name = "News"
+  name = "Events"
   URL = "subscribe"
   weight = 5
 
@@ -75,7 +75,7 @@ paginate = 4
 
 #################### default parameters ################################
 [params]
-# logo = "images/logo.png"
+logo = "images/mccc-text-logo.png"
 # meta data
 author = "Themefisher"
 description = "This is meta description"
@@ -99,14 +99,14 @@ socialTitle = "Follow <span>US</span>"
 
 ############################ footer contact item
 # [[params.footer.contactItem]]
-# title="Telephone"
+# title="President Phone"
 # icon = "fa fa-phone"
-# content = "016742 323313"
-#
-# [[params.footer.contactItem]]
-# title="Address"
-# icon = "fa fa-map-marker"
-# content = "2046 Blue Spruce Lane Laurel Canada"
+# content = "+1 (206)-602-4873"
+
+[[params.footer.contactItem]]
+title="Address"
+icon = "fa fa-map-marker"
+content = "PO Box 753 Wellington CO 80549"
 
 [[params.footer.contactItem]]
 title="E mail"
