--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "themes/restaurant-hugo"]
 	path = themes/restaurant-hugo
 	url = https://github.com/themefisher/restaurant-hugo.git
+[submodule "public"]
+	path = public
+	url = https://github.com/mustangcarclubcolorado/mustangcarclubcolorado.github.io.git
+	branch = master
